--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,64 +1,68 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 	html, body
 	{
 		height: 100%;
 	}
-	
+
 	body
 	{
-		margin: 0px;
-		padding: 0px;
+		margin: 0;
+		padding: 0;
 		background: #404040;
 		font-family: 'Quicksand', sans-serif;
 		font-size: 12pt;
 		font-weight: 400;
 		color: #000000;
 	}
-	
-	
+
+
 	h1, h2, h3
 	{
 		margin: 0;
 		padding: 0;
 		color: #404040;
 	}
-	
+
 	p, ol, ul
 	{
 		margin-top: 0;
 	}
-	
+
 	ol, ul
 	{
 		padding: 0;
 		list-style: none;
 	}
-	
+
 	p
 	{
 		line-height: 180%;
 	}
-	
+
 	strong
 	{
 	}
-	
+
 	a
 	{
 		color: #ff8a0e;
 	}
-	
+
 	a:hover
 	{
 		text-decoration: none;
 	}
-	
+
 
 	.container
 	{
 		margin: 0px auto;
 		width: 1200px;
 	}
-	
+
 
 /*********************************************************************************/
 /* Form Style                                                                    */
@@ -67,21 +71,21 @@
 		form
 		{
 		}
-		
+
 			form label
 			{
 				display: block;
 				text-align: left;
 				margin-bottom: 0.5em;
 			}
-			
+
 			form .submit
 			{
 				margin-top: 2em;
 				line-height: 1.5em;
 				font-size: 1.3em;
 			}
-		
+
 			form input.text,
 			form select,
 			form textarea
@@ -89,12 +93,11 @@
 				position: relative;
 				-webkit-appearance: none;
 				display: block;
-				border: 0;
 				background: #fff;
 				background: rgba(255,255,255,0.75);
 				width: 100%;
 				border-radius: 0.50em;
-				margin: 1em 0em;
+				margin: 1em 0;
 				padding: 1.50em 1em;
 				box-shadow: inset 0 0.1em 0.1em 0 rgba(0,0,0,0.05);
 				border: solid 1px rgba(0,0,0,0.15);
@@ -120,7 +123,7 @@
 					box-shadow: 0 0 2px 1px #E0E0E0;
 					background: #fff;
 				}
-				
+
 				form textarea
 				{
 					min-height: 12em;
@@ -166,32 +169,32 @@
 		display: inline-block;
 		border: 1px solid rgba(0,0,0,.1);
 	}
-	
+
 	.image img
 	{
 		display: block;
 		width: 100%;
 	}
-	
+
 	.image-full
 	{
 		display: block;
 		width: 100%;
 		margin: 0 0 3em 0;
 	}
-	
+
 	.image-left
 	{
 		float: left;
 		margin: 0 2em 2em 0;
 	}
-	
+
 	.image-centered
 	{
 		display: block;
 		margin: 0 0 2em 0;
 	}
-	
+
 	.image-centered img
 	{
 		margin: 0 auto;
@@ -214,29 +217,29 @@
 	ul.contact
 	{
 		margin: 0;
-		padding: 2em 0em 0em 0em;
+		padding: 2em 0 0 0;
 		list-style: none;
 	}
-	
+
 	ul.contact li
 	{
 		display: inline-block;
-		padding: 0em 0.10em;
+		padding: 0 0.10em;
 		font-size: 1em;
 	}
-	
+
 	ul.contact li span
 	{
 		display: none;
 		margin: 0;
 		padding: 0;
 	}
-	
+
 	ul.contact li a
 	{
 		color: #FFF;
 	}
-	
+
 	ul.contact li a:before
 	{
 		display: inline-block;
@@ -247,7 +250,7 @@
 		text-align: center;
 		color: #FFFFFF;
 	}
-	
+
 
 /*********************************************************************************/
 /* Button Style                                                                  */
@@ -266,7 +269,7 @@
 		font-size: 1em;
 		color: #FFF;
 	}
-	
+
 	.button:before
 	{
 		display: inline-block;
@@ -279,11 +282,11 @@
 		text-align: center;
 		color: #272925;
 	}
-	
+
 	.button-small
 	{
 	}
-		
+
 /*********************************************************************************/
 /* Heading Titles                                                                */
 /*********************************************************************************/
@@ -292,12 +295,12 @@
 	{
 		margin-bottom: 3em;
 	}
-	
+
 	.title h2
 	{
 		font-size: 2.8em;
 	}
-	
+
 	.title .byline
 	{
 		text-transform: uppercase;
@@ -313,7 +316,7 @@
 	#header-wrapper
 	{
 		overflow: hidden;
-		padding: 10em 0em 10em 0em;
+		padding: 10em 0 10em 0;
 		background: url(../images/bg01.jpg) repeat-x center top;
 		border-bottom: 20px solid rgba(0,0,0,.5);
 	}
@@ -329,7 +332,7 @@
 	#logo
 	{
 	}
-	
+
 	#logo h1
 	{
 		display: inline-block;
@@ -338,13 +341,13 @@
 		background: #000;
 		font-size: 3.5em;
 	}
-	
+
 	#logo a
 	{
 		text-decoration: none;
 		color: #FFF;
 	}
-	
+
 	#logo span
 	{
 		display: block;
@@ -357,8 +360,8 @@
 	{
 		color: rgba(255,255,255,0.8);
 	}
-	
-	
+
+
 
 /*********************************************************************************/
 /* Menu                                                                          */
@@ -367,20 +370,20 @@
 	#menu
 	{
 	}
-	
+
 	#menu ul
 	{
 		display: inline-block;
-		padding: 0em 2em;
+		padding: 0 2em;
 		background: #ff8a0e;
 		text-align: center;
 	}
-	
+
 	#menu li
 	{
 		display: inline-block;
 	}
-	
+
 	#menu li a, #menu li span
 	{
 		display: inline-block;
@@ -392,16 +395,16 @@
 		outline: 0;
 		color: #FFF;
 	}
-	
+
 	#menu li:hover a, #menu li.active a, #menu li.active span
 	{
 	}
-	
+
 	#menu .current_page_item a
 	{
 		color: #000;
 	}
-	
+
 
 /*********************************************************************************/
 /* Banner                                                                        */
@@ -419,7 +422,7 @@
 	#wrapper
 	{
 		overflow: hidden;
-		padding: 0em 0em 5em 0em;
+		padding: 0 0 5em 0;
 		background: #FFF;
 	}
 
@@ -435,7 +438,7 @@
 	#wrapper3
 	{
 	}
-	
+
 	#wrapper4
 	{
 	}
@@ -448,21 +451,21 @@
 	{
 		overflow: hidden;
 		width: 1000px;
-		padding: 8em 100px 0em 100px;
+		padding: 8em 100px 0 100px;
 		text-align: center;
 		color: rgba(0,0,0,0.6);
 	}
-	
+
 	#welcome .content
 	{
-		padding: 0em 8em;
+		padding: 0 8em;
 	}
-	
+
 	#welcome .title h2
 	{
 		color: rgba(0,0,0,0.8);
 	}
-	
+
 	#welcome a,
 	#welcome strong
 	{
@@ -477,7 +480,7 @@
 	{
 		overflow: hidden;
 		background: #F3F3F3;
-		padding: 3em 0em;
+		padding: 3em 0;
 		text-align: center;
 	}
 
@@ -516,7 +519,7 @@
 		text-align: center;
 	}
 
-	
+
 	#footer .title span
 	{
 		color: rgba(255,255,255,0.4);
@@ -529,18 +532,18 @@
 	#copyright
 	{
 		overflow: hidden;
-		padding: 5em 0em;
+		padding: 5em 0;
 		border-top: 1px solid rgba(255,255,255,0.08);
 		text-align: center;
 	}
-	
+
 	#copyright p
 	{
 		text-transform: uppercase;
 		font-size: 0.80em;
 		color: rgba(255,255,255,0.3);
 	}
-	
+
 	#copyright a
 	{
 		text-decoration: none;
@@ -554,36 +557,39 @@
 	#newsletter
 	{
 		overflow: hidden;
-		padding: 8em 0em;
+		padding: 8em 0;
 		background: #EDEDED;
 		text-align: center;
 	}
-	
+
 	#newsletter .title h2
 	{
 		color: rgba(0,0,0,0.8);
 	}
-	
+
 	#newsletter .content
 	{
 		width: 600px;
-		margin: 0px auto;
+		margin: 0 auto;
+        @apply rou
 	}
-	
+
 /*********************************************************************************/
 /* Portfolio                                                                     */
 /*********************************************************************************/
 
 	#portfolio
 	{
+        padding-bottom: 4em;
+        padding: 8rem;
 	}
-	
+
 	#portfolio .box
 	{
 		text-align: center;
-		color: rgba(0,0,0,0.5);
+		color: rgba(0,0,0,0.2);
 	}
-	
+
 	#portfolio h3
 	{
 		display: block;
@@ -610,18 +616,14 @@
 	{
 		width: 282px;
 	}
-	
+
 	.column1,
 	.column2,
-	.column3
+	.column3,
+    .column4
 	{
 		float: left;
 		margin-right: 24px;
-	}
-	
-	.column4
-	{
-		float: right;
 	}
 
 /*********************************************************************************/
@@ -633,20 +635,20 @@
 		overflow: hidden;
 		text-align: center;
 	}
-	
+
 	#three-column h2
 	{
-		margin: 1em 0em;
+		margin: 1em 0;
 		text-transform: uppercase;
 		font-size: 1.5em;
 		font-weight: 700;
 	}
-	
+
 	#three-column .icon
 	{
 		position: relative;
 		display: block;
-		margin: 0px auto 0.80em auto;
+		margin: 0 auto 0.80em auto;
 		background: none;
 		line-height: 150px;
 		font-size: 4em;
@@ -656,9 +658,9 @@
 		border: 6px solid #67128F;
 		text-align: center;
 		color: #FFF;
-		
+
 	}
-		
+
 	#three-column #tbox1,
 	#three-column #tbox2,
 	#three-column #tbox3
@@ -667,18 +669,18 @@
 		width: 320px;
 		padding: 80px 40px 80px 40px;
 	}
-	
+
 	#three-column .title
 	{
 		text-align: center;
 		text-transform: uppercase;
 	}
-	
+
 	#three-column .title h2
 	{
 		font-size: 1.60em;
 	}
-	
+
 	#three-column .title .byline
 	{
 		padding-top: 0.50em;
@@ -691,4 +693,55 @@
 		border-top-color: #292929;
 	}
 
-	
+
+
+/*********************************************************************************/
+/* Image Gallery                                                                 */
+/*********************************************************************************/
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    /* Compensate for excess margin on outer gallery flex items */
+    margin: -1rem -1rem;
+}
+
+.gallery-item {
+    /* Minimum width of 24rem and grow to fit available space */
+    flex: 1 0 24rem;
+    /* Margin value should be half of grid-gap value as margins on flex items don't collapse */
+    margin: 1rem;
+    box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+    overflow: hidden;
+    object-fit: cover;
+    transition: transform 400ms ease-out;
+}
+
+.gallery-item:hover {
+    transform: scale(1.061);
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+
+/*
+The following rule will only run if your browser supports CSS grid.
+Remove or comment-out the code block below to see how the browser will fall-back to flexbox styling.
+*/
+
+@supports (display: grid) {
+    .gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+        grid-gap: 2rem;
+    }
+
+    .gallery,
+    .gallery-item {
+        margin: 0;
+    }
+}
