--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,19 +5,33 @@
 $primary: tomato;
 
 
-
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html, body
-{
+
+/*********************************************************************************/
+/*      Page loading                                                             */
+/*********************************************************************************/
+#loading {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    display: block;
+    opacity: 0.7;
+    background-color: #fff;
+    z-index: 99;
+    text-align: center;
+}
+
+
+html, body {
     height: 100%;
 }
 
-body
-{
+body {
     margin: 0;
     padding: 0;
     background: #404040;
@@ -763,4 +777,5 @@ Remove or comment-out the code block below to see how the browser will fall-back
     padding-top: 1rem;
     padding-bottom: 0.5rem;
 }
+
 
