--- a/resources/sass/tailwind.scss
+++ b/resources/sass/tailwind.scss
@@ -1,9 +1,3 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
-
-
-
 
 @tailwind base;
 @tailwind components;
@@ -36,11 +30,11 @@
 /* Menu                                                                          */
 /*********************************************************************************/
 
-// Only when navigator on that page
+// On active page.
 #menu .current_page_item a
 {
     background: linear-gradient(124deg, #00C4FF, #9D1BB2);
-    @apply  px-1;
+    @apply w-full h-full;
 }
 
 #menu .current_page_item_left a{
@@ -51,6 +45,13 @@
     @apply rounded-r-full;
 }
 
-#menu li
-{
+#menu ul li a {
+    @apply    justify-center flex py-2 w-full   justify-center border-l-4 border-r-4  border-gray-800;
 }
+
+#menu ul li a {
+    @screen lg {
+        @apply px-2 border-0 ml-1;
+    }
+}
+
