style(mobile): contacts.blade.php.

--- a/resources/sass/tailwind.scss
+++ b/resources/sass/tailwind.scss
@@ -55,3 +55,16 @@
     }
 }
 
+
+/*********************************************************************************/
+/* Feedback                                                                          */
+/*********************************************************************************/
+
+dt {
+        @apply text-center;
+}
+
+dd {
+        @apply text-center;
+}
+
