style(mobile): clients.

--- a/resources/sass/tailwind.scss
+++ b/resources/sass/tailwind.scss
@@ -60,11 +60,11 @@
 /* Feedback                                                                          */
 /*********************************************************************************/
 
-dt {
+#feedback dt {
         @apply text-center;
 }
 
-dd {
+#feedback dd {
         @apply text-center;
 }
 
