--- a/resources/sass/tailwind.scss
+++ b/resources/sass/tailwind.scss
@@ -68,3 +68,10 @@
         @apply text-center;
 }
 
+/*********************************************************************************/
+/* Feedback                                                                          */
+/*********************************************************************************/
+
+#page-hint {
+    @apply text-lg py-6  px-4 text-center;
+}
