--- a/public/css/vanilla.css
+++ b/public/css/vanilla.css
@@ -1,1 +1,677 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400);*{font-family:Open Sans,sans-serif}#loading{width:100%;top:0;left:0;position:fixed;display:block;opacity:.7;background-color:#fff;z-index:99;text-align:center}#loading,body,html{height:100%}body{font-size:12pt;font-weight:400;color:#000}body,h2,h3{margin:0;padding:0}h2,h3{color:#404040}ol,p,ul{margin-top:0}ol,ul{padding:0;list-style:none}p{line-height:180%}a{color:#ff8a0e}a:hover{text-decoration:none}.container{margin:0 auto;width:1200px}@-webkit-keyframes flash{0%{opacity:1}to{opacity:0}}@keyframes flash{0%{opacity:1}to{opacity:0}}.bg-gradient h1{background:linear-gradient(124deg,#00c4ff,#9d1bb2);background-size:100%;background-repeat:repeat;-webkit-background-clip:text;-webkit-text-fill-color:transparent}body,html{margin:0}.scroller{position:fixed;top:0;height:0;width:100%;background:#fff}main{margin-top:0}body{background:linear-gradient(to right top,#c69 50%,#ddd 0);background-size:100% calc(100% - 100vh - 6px);background-repeat:no-repeat}body:before{content:"";position:fixed;top:6px;bottom:0;width:100%;z-index:-1;background:#fff}main{font-family:monospace;max-width:50%;margin:0 auto;font-size:1.5em}main h1{color:#c69}main div{margin-bottom:1em}form label{display:block;text-align:left;margin-bottom:.5em}form .submit{margin-top:2em;line-height:1.5em;font-size:1.3em}form input.text,form select,form textarea{position:relative;-webkit-appearance:none;display:block;background:#fff;background:hsla(0,0%,100%,.75);width:100%;border-radius:.5em;margin:1em 0;padding:1.5em 1em;box-shadow:inset 0 .1em .1em 0 rgba(0,0,0,.05);border:1px solid rgba(0,0,0,.15);transition:all .35s ease-in-out;font-size:1em;outline:none}form input.text:focus,form select:focus,form textarea:focus{box-shadow:0 0 2px 1px #e0e0e0;background:#fff}form textarea{min-height:12em}form .formerize-placeholder{color:#555!important}form ::-webkit-input-placeholder{color:#555!important}form :-moz-placeholder,form ::-moz-placeholder{color:#555!important}form :-ms-input-placeholder{color:#555!important}form ::-moz-focus-inner{border:0}.image{display:inline-block;border:1px solid rgba(0,0,0,.1)}.image-full,.image img{display:block;width:100%}.image-full{margin:0 0 3em}.image-left{float:left;margin:0 2em 2em 0}.image-centered{display:block;margin:0 0 2em}.image-centered img{margin:0 auto;width:auto}ul.contact{margin:0;padding:2em 0 0;list-style:none}ul.contact li{display:inline-block;padding:0 .1em;font-size:1em}ul.contact li span{display:none;margin:0;padding:0}ul.contact li a{color:#fff}ul.contact li a:before{display:inline-block;background:#ff8a0e;width:40px;height:40px;line-height:40px;text-align:center;color:#fff}.title{margin-bottom:3em}.title h2{font-size:2.8em}.title .byline{text-transform:uppercase;font-weight:400;font-size:1.1em;color:#6f6f6f}#header-wrapper{overflow:hidden;padding:1rem 0 1.6rem;background:linear-gradient(124deg,#00c4ff,#9d1bb2)}#logo a{text-decoration:none;color:#fff}#logo span{display:block;text-transform:uppercase;font-size:.9em;color:hsla(0,0%,100%,.5)}#logo span a{color:hsla(0,0%,100%,.8)}#wrapper{overflow:hidden;padding:0 0 5em}#wrapper,#wrapper1{background:#fff}#welcome{overflow:hidden;width:1000px;padding:8em 100px 0;text-align:center;color:rgba(0,0,0,.6)}#welcome .content{padding:0 8em}#welcome .title h2,#welcome a,#welcome strong{color:rgba(0,0,0,.8)}#page-wrapper{overflow:hidden;background:#f3f3f3;padding:3em 0;text-align:center}#content{float:left;width:700px;padding-right:100px;border-right:1px solid rgba(0,0,0,.1)}#sidebar{float:right;width:350px}#footer{text-align:center}#footer .title span{color:hsla(0,0%,100%,.4)}#copyright{background:linear-gradient(124deg,#00c4ff,#9d1bb2)}#copyright p{text-transform:uppercase}#copyright a{text-decoration:none}#newsletter{overflow:hidden;padding:8em 0;background:#ededed;text-align:center}#newsletter .title h2{color:rgba(0,0,0,.8)}#newsletter .content{width:600px;margin:0 auto}#portfolio{padding:8rem 8rem 4em}#portfolio .box{text-align:center;color:rgba(0,0,0,.2)}#portfolio h3{display:block;padding-bottom:1em;text-transform:uppercase;font-size:1em;color:rgba(0,0,0,.6)}#portfolio .title{text-align:center}#portfolio .title h2{color:rgba(0,0,0,.8)}.column1,.column2,.column3,.column4{width:282px;float:left;margin-right:24px}#three-column{overflow:hidden;text-align:center}#three-column h2{margin:1em 0;text-transform:uppercase;font-size:1.5em;font-weight:700}#three-column .icon{position:relative;display:block;margin:0 auto .8em;background:none;line-height:150px;font-size:4em;width:150px;height:200px;border-radius:100px;border:6px solid #67128f;text-align:center;color:#fff}#three-column #tbox1,#three-column #tbox2,#three-column #tbox3{float:left;width:320px;padding:80px 40px}#three-column .title{text-align:center;text-transform:uppercase}#three-column .title h2{font-size:1.6em}#three-column .title .byline{padding-top:.5em;font-size:.9em;color:#858585}#three-column .arrow-down{border-top-color:#292929}.gallery{display:flex;flex-wrap:wrap;margin:-1rem}.gallery-item{flex:1 0 32rem;margin:1rem;box-shadow:.3rem .4rem .4rem rgba(0,0,0,.4);overflow:hidden;-o-object-fit:cover;object-fit:cover;transition:transform .4s ease-out}.gallery-item:hover{transform:scale(1.061)}*,:after,:before{box-sizing:border-box}@supports (display:grid){.gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(24rem,1fr));grid-gap:2rem}.gallery,.gallery-item{margin:0}}.field{padding-top:1rem;padding-bottom:.5rem}
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400);/*********************************************************************************/
+
+/*   Font family                                                                 */
+
+/*********************************************************************************/
+
+* {
+  font-family: "Open Sans", sans-serif;
+}
+
+/*********************************************************************************/
+
+/*      Page loading                                                             */
+
+/*********************************************************************************/
+
+#loading {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  display: block;
+  opacity: 0.7;
+  background-color: #fff;
+  z-index: 99;
+  text-align: center;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 12pt;
+  font-weight: 400;
+  color: #000000;
+}
+
+h2, h3 {
+  margin: 0;
+  padding: 0;
+  color: #404040;
+}
+
+p, ol, ul {
+  margin-top: 0;
+}
+
+ol, ul {
+  padding: 0;
+  list-style: none;
+}
+
+p {
+  line-height: 180%;
+}
+
+a {
+  color: #ff8a0e;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.container {
+  margin: 0 auto;
+  width: 1200px;
+}
+
+/*********************************************************************************/
+
+/* Auto-typing                                                                   */
+
+/*********************************************************************************/
+
+@-webkit-keyframes flash {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes flash {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+.bg-gradient h1 {
+  /* Create the gradient. */
+  background: linear-gradient(124deg, #00C4FF, #9D1BB2);
+  /* Set the background size and repeat properties. */
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/*********************************************************************************/
+
+/* Css scroller                                                                  */
+
+/*********************************************************************************/
+
+html, body {
+  margin: 0;
+}
+
+.scroller {
+  position: fixed;
+  top: 0;
+  height: 0;
+  width: 100%;
+  background: white;
+}
+
+main {
+  margin-top: 0;
+}
+
+body {
+  background: linear-gradient(to right top, #c69 50%, #ddd 50%);
+  background-size: 100% calc(100% - 100vh + -6px);
+  background-repeat: no-repeat;
+}
+
+body:before {
+  content: "";
+  position: fixed;
+  top: 6px;
+  bottom: 0;
+  width: 100%;
+  z-index: -1;
+  background: white;
+}
+
+main {
+  font-family: monospace;
+  max-width: 50%;
+  margin: 0 auto;
+  font-size: 1.5em;
+}
+
+main h1 {
+  color: #c69;
+}
+
+main div {
+  margin-bottom: 1em;
+}
+
+/*********************************************************************************/
+
+/* Form Style                                                                    */
+
+/*********************************************************************************/
+
+form label {
+  display: block;
+  text-align: left;
+  margin-bottom: 0.5em;
+}
+
+form .submit {
+  margin-top: 2em;
+  line-height: 1.5em;
+  font-size: 1.3em;
+}
+
+form input.text,
+form select,
+form textarea {
+  position: relative;
+  -webkit-appearance: none;
+  display: block;
+  background: #fff;
+  background: rgba(255, 255, 255, 0.75);
+  width: 100%;
+  border-radius: 0.5em;
+  margin: 1em 0;
+  padding: 1.5em 1em;
+  box-shadow: inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
+  border: solid 1px rgba(0, 0, 0, 0.15);
+  transition: all 0.35s ease-in-out;
+  font-size: 1em;
+  outline: none;
+}
+
+form input.text:focus,
+form select:focus,
+form textarea:focus {
+  box-shadow: 0 0 2px 1px #E0E0E0;
+  background: #fff;
+}
+
+form textarea {
+  min-height: 12em;
+}
+
+form .formerize-placeholder {
+  color: #555 !important;
+}
+
+form ::-webkit-input-placeholder {
+  color: #555 !important;
+}
+
+form :-moz-placeholder {
+  color: #555 !important;
+}
+
+form ::-moz-placeholder {
+  color: #555 !important;
+}
+
+form :-ms-input-placeholder {
+  color: #555 !important;
+}
+
+form ::-moz-focus-inner {
+  border: 0;
+}
+
+/*********************************************************************************/
+
+/* Image Style                                                                   */
+
+/*********************************************************************************/
+
+.image {
+  display: inline-block;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.image img {
+  display: block;
+  width: 100%;
+}
+
+.image-full {
+  display: block;
+  width: 100%;
+  margin: 0 0 3em 0;
+}
+
+.image-left {
+  float: left;
+  margin: 0 2em 2em 0;
+}
+
+.image-centered {
+  display: block;
+  margin: 0 0 2em 0;
+}
+
+.image-centered img {
+  margin: 0 auto;
+  width: auto;
+}
+
+/*********************************************************************************/
+
+/* List Styles                                                                   */
+
+/*********************************************************************************/
+
+/*********************************************************************************/
+
+/* Social Icon Styles                                                            */
+
+/*********************************************************************************/
+
+ul.contact {
+  margin: 0;
+  padding: 2em 0 0 0;
+  list-style: none;
+}
+
+ul.contact li {
+  display: inline-block;
+  padding: 0 0.1em;
+  font-size: 1em;
+}
+
+ul.contact li span {
+  display: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul.contact li a {
+  color: #FFF;
+}
+
+ul.contact li a:before {
+  display: inline-block;
+  background: #ff8a0e;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+/*********************************************************************************/
+
+/* Heading Titles                                                                */
+
+/*********************************************************************************/
+
+.title {
+  margin-bottom: 3em;
+}
+
+.title h2 {
+  font-size: 2.8em;
+}
+
+.title .byline {
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 1.1em;
+  color: #6F6F6F;
+}
+
+/*********************************************************************************/
+
+/* Header                                                                        */
+
+/*********************************************************************************/
+
+#header-wrapper {
+  overflow: hidden;
+  padding: 1rem 0 1.6rem 0;
+  background: linear-gradient(124deg, #00C4FF, #9D1BB2);
+}
+
+/*********************************************************************************/
+
+/* Logo                                                                          */
+
+/*********************************************************************************/
+
+#logo a {
+  text-decoration: none;
+  color: #FFF;
+}
+
+#logo span {
+  display: block;
+  text-transform: uppercase;
+  font-size: 0.9em;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+#logo span a {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+/*********************************************************************************/
+
+/* Banner                                                                        */
+
+/*********************************************************************************/
+
+/*********************************************************************************/
+
+/* Wrapper                                                                       */
+
+/*********************************************************************************/
+
+#wrapper {
+  overflow: hidden;
+  padding: 0 0 5em 0;
+  background: #FFF;
+}
+
+#wrapper1 {
+  background: #FFF;
+}
+
+/*********************************************************************************/
+
+/* Welcome                                                                       */
+
+/*********************************************************************************/
+
+#welcome {
+  overflow: hidden;
+  width: 1000px;
+  padding: 8em 100px 0 100px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+#welcome .content {
+  padding: 0 8em;
+}
+
+#welcome .title h2 {
+  color: rgba(0, 0, 0, 0.8);
+}
+
+#welcome a,
+#welcome strong {
+  color: rgba(0, 0, 0, 0.8);
+}
+
+/*********************************************************************************/
+
+/* Page                                                                          */
+
+/*********************************************************************************/
+
+#page-wrapper {
+  overflow: hidden;
+  background: #F3F3F3;
+  padding: 3em 0;
+  text-align: center;
+}
+
+/*********************************************************************************/
+
+/* Content                                                                       */
+
+/*********************************************************************************/
+
+#content {
+  float: left;
+  width: 700px;
+  padding-right: 100px;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+/*********************************************************************************/
+
+/* Sidebar                                                                       */
+
+/*********************************************************************************/
+
+#sidebar {
+  float: right;
+  width: 350px;
+}
+
+/*********************************************************************************/
+
+/* Footer                                                                        */
+
+/*********************************************************************************/
+
+#footer {
+  text-align: center;
+}
+
+#footer .title span {
+  color: rgba(255, 255, 255, 0.4);
+}
+
+/*********************************************************************************/
+
+/* Copyright at the bottom                                                       */
+
+/*********************************************************************************/
+
+#copyright {
+  background: linear-gradient(124deg, #00C4FF, #9D1BB2);
+}
+
+#copyright p {
+  text-transform: uppercase;
+}
+
+#copyright a {
+  text-decoration: none;
+}
+
+/*********************************************************************************/
+
+/* Newsletter                                                                    */
+
+/*********************************************************************************/
+
+#newsletter {
+  overflow: hidden;
+  padding: 8em 0;
+  background: #EDEDED;
+  text-align: center;
+}
+
+#newsletter .title h2 {
+  color: rgba(0, 0, 0, 0.8);
+}
+
+#newsletter .content {
+  width: 600px;
+  margin: 0 auto;
+}
+
+/*********************************************************************************/
+
+/* Portfolio                                                                     */
+
+/*********************************************************************************/
+
+#portfolio {
+  padding: 8rem;
+  padding-bottom: 4em;
+}
+
+#portfolio .box {
+  text-align: center;
+  color: rgba(0, 0, 0, 0.2);
+}
+
+#portfolio h3 {
+  display: block;
+  padding-bottom: 1em;
+  text-transform: uppercase;
+  font-size: 1em;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+#portfolio .title {
+  text-align: center;
+}
+
+#portfolio .title h2 {
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.column1,
+.column2,
+.column3,
+.column4 {
+  width: 282px;
+}
+
+.column1,
+.column2,
+.column3,
+.column4 {
+  float: left;
+  margin-right: 24px;
+}
+
+/*********************************************************************************/
+
+/* Three Columns                                                                 */
+
+/*********************************************************************************/
+
+#three-column {
+  overflow: hidden;
+  text-align: center;
+}
+
+#three-column h2 {
+  margin: 1em 0;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  font-weight: 700;
+}
+
+#three-column .icon {
+  position: relative;
+  display: block;
+  margin: 0 auto 0.8em auto;
+  background: none;
+  line-height: 150px;
+  font-size: 4em;
+  width: 150px;
+  height: 200px;
+  border-radius: 100px;
+  border: 6px solid #67128F;
+  text-align: center;
+  color: #FFF;
+}
+
+#three-column #tbox1,
+#three-column #tbox2,
+#three-column #tbox3 {
+  float: left;
+  width: 320px;
+  padding: 80px 40px 80px 40px;
+}
+
+#three-column .title {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+#three-column .title h2 {
+  font-size: 1.6em;
+}
+
+#three-column .title .byline {
+  padding-top: 0.5em;
+  font-size: 0.9em;
+  color: #858585;
+}
+
+#three-column .arrow-down {
+  border-top-color: #292929;
+}
+
+/*********************************************************************************/
+
+/* Image Gallery                                                                 */
+
+/*********************************************************************************/
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  /* Compensate for excess margin on outer gallery flex items */
+  margin: -1rem -1rem;
+}
+
+.gallery-item {
+  /* Minimum width of 24rem and grow to fit available space */
+  flex: 1 0 32rem;
+  /* Margin value should be half of grid-gap value as margins on flex items don't collapse */
+  margin: 1rem;
+  box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+  overflow: hidden;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: transform 400ms ease-out;
+}
+
+.gallery-item:hover {
+  transform: scale(1.061);
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/*
+The following rule will only run if your browser supports CSS grid.
+Remove or comment-out the code block below to see how the browser will fall-back to flexbox styling.
+*/
+
+@supports (display: grid) {
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+    grid-gap: 2rem;
+  }
+
+  .gallery,
+.gallery-item {
+    margin: 0;
+  }
+}
+
+/*
+*/
+
+.field {
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+}
